deployment/service-account.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: bookstore-servicemesh
