deployment/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servicemesh-account
  namespace: bookstore-servicemesh
spec:
  host: servicemesh-account
